--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
     "express": "~4.15.5",
+    "express-paginate": "^0.3.0",
     "method-override": "^2.3.10",
     "morgan": "~1.9.0",
     "pg": "^7.4.1",
