--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pg-hstore": "^2.3.2",
     "pug": "^2.0.0-rc.4",
     "sequelize": "^4.32.2",
+    "sequelize-cli": "^4.0.0",
     "serve-favicon": "~2.4.5",
     "socket.io": "^2.0.4",
     "stripe": "^5.3.0"
