--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express-paginate": "^0.3.0",
     "method-override": "^2.3.10",
     "morgan": "~1.9.0",
+    "nodemailer": "^4.4.2",
+    "nodemailer-mailgun-transport": "^1.3.6",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "pug": "^2.0.0-rc.4",
